css: try to prevent initial h1 and h2 flicker on android chrome

--- a/main.css
+++ b/main.css
@@ -163,6 +163,7 @@ body {
 }
 
 .animate-typing-h1 {
+  -webkit-backface-visibility: hidden;
   -webkit-animation: 
     typing 1s 1.5s steps(40),
     blink-caret 0.0909s 1.5s step-end 11,
@@ -176,6 +177,7 @@ body {
 }
 
 .animate-typing-h2 {
+  -webkit-backface-visibility: hidden;
   -webkit-animation: 
     typing 1s 2.5s steps(40),
     blink-caret 0.0909s 2.5s step-end 11,
